static/css/sudoku.css
body {
    width: 100%;
    height: 100%;
    font-family: 'Open Sans',"Helvetica Neue",Helvetica,Arial,sans-serif;
    color: #fff;
    background-color: #000;
}

html {
    width: 100%;
    height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 35px;
    text-transform: uppercase;
    font-family: 'Alegreya Sans', Arial,sans-serif;
    font-weight: 700;
    letter-spacing: 1px;
}
p {
    margin: 0;
    font-size: 16px;
    line-height: 1.5;
    padding-bottom: 0;
}

@media(min-width:768px) {
    p {
        margin: 0;
        font-size: 16px;
        line-height: 1.6;
        padding-bottom: 0;
    }
}

a {
    color: #42dca3;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

a:hover,
a:focus {
    text-decoration: none;
    color: #1d9b6c;
}

.light {
    font-weight: 400;
}

.navbar-custom {
    margin-bottom: 0;
    border-bottom: 1px solid rgba(255,255,255,.3);
    text-transform: uppercase;
    font-family: 'Alegreya Sans', Arial,sans-serif;;
    background-color: #000;
}

.fa{
    color: grey;
    background-color: grey;
}

.navbar-custom .navbar-brand {
    font-weight: 700;
}

.navbar-custom .navbar-brand:focus {
    outline: 0;
}

.navbar-custom .navbar-brand .navbar-toggle {
    padding: 4px 6px;
    font-size: 16px;
    color: #fff;
}

.navbar-custom .navbar-brand .navbar-toggle:focus,
.navbar-custom .navbar-brand .navbar-toggle:active {
    outline: 0;
}

.navbar-custom a {
    color: grey;
}

.navbar-custom .nav li a {
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.navbar-custom .nav li a:hover {
    outline: 0;
    color: rgba(255,255,255,.8);
    background-color: transparent;
}

.navbar-custom .nav li a:focus,
.navbar-custom .nav li a:active {
    outline: 0;
    background-color: transparent;
}

.navbar-custom .nav li.active {
    outline: 0;
}

.navbar-custom .nav li.active a {
    background-color: rgba(255,255,255,.3);
}

.navbar-custom .nav li.active a:hover {
    color: #fff;
}

@media(min-width:768px) {
    .navbar-custom {
        padding: 20px 0;
        border-bottom: 0;
        letter-spacing: 1px;
        background: 0 0;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
    }

    .navbar-custom.top-nav-collapse {
        padding: 0;
        border-bottom: 1px solid rgba(255,255,255,.3);
        background: #000;
    }
}

.intro {
    display: table;
    width: 100%;
    height: auto;
    padding: 100px 0;
    text-align: center;
    color: #fff;
    background: url(/static/img/intro-background.png) no-repeat bottom center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.about{
    display: table;
    width: 100%;
    height: auto;
    padding: 100px 0;
}

#page-body{
    background: url(/static/img/about-background.png) no-repeat bottom center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.intro .intro-body {
    display: table-cell;
    vertical-align: middle;
}

.intro .intro-body .brand-heading {
    font-size: 40px;
}

.intro .intro-body .intro-text {
    font-size: 18px;
}

@media(min-width:768px) {
    .intro, .about{
        height: 100%;
        padding: 0;
    }

    .intro .intro-body .brand-heading {
        font-size: 100px;
    }

    .intro .intro-body .intro-text {
        font-size: 26px;
    }
}

.btn-circle:hover,
.btn-circle:focus {
    outline: 0;
    color: #fff;
    background: rgba(255,255,255,.1);
}

.btn-circle i.animated {
    -webkit-transition-property: -webkit-transform;
    -webkit-transition-duration: 1s;
    -moz-transition-property: -moz-transform;
    -moz-transition-duration: 1s;
}

.btn-circle:hover i.animated {
    -webkit-animation-name: pulse;
    -moz-animation-name: pulse;
    -webkit-animation-duration: 1.5s;
    -moz-animation-duration: 1.5s;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
}

@-webkit-keyframes pulse {    
    0% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -webkit-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }
}

@-moz-keyframes pulse {    
    0% {
        -moz-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -moz-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -moz-transform: scale(1);
        transform: scale(1);
    }
}

.download-section {
    width: 100%;
    padding: 50px 0;
    color: #fff;
}
    
@media(min-width:768px) {
    .content-section {
        padding-top: 250px;
    }

    .download-section {
        padding: 100px 0;
    }

}
.control-button{
    padding: 4px;
    margin-bottom: 10px;
    margin-left: 4px;
    margin-right: 4px;
    border-radius: 4px;
    border: #324A45 1px solid;
    font-size: 2em;
}

@media(max-width:767px) {
    .control-button {
        font-size: 0.8em;
        padding: 1px;
        margin-left: 2px;
        margin-right: 2px;
    }

}
.btn {
    border-radius: 0;
    /*text-transform: uppercase;*/
    font-family: 'Alegreya Sans', Arial,sans-serif;
    font-weight: 400;
    /*-webkit-transition: all .3s ease-in-out;*/
    /*-moz-transition: all .3s ease-in-out;*/
    /*transition: all .3s ease-in-out;*/
    /*color: #c;*/
}


.btn-board, button{
    color: #324A45;
    font-family: 'Open Sans',"Helvetica Neue",Helvetica,Arial,sans-serif;
       -webkit-appearance: none;
}
.btn-default, .btn, .btn-board{
    filter: none;
    background-image: none;
}
button.cell-btn:focus, button.cell-btn:active{
   background-color: #C4A58C; 
}
hr {
    margin: 5px;
}

table{
    margin: 0 auto;
}

#sudoku{
    border: 3px solid black;
    border-radius: 4px;
    padding-top: 20px;
    padding-right: 20px;
    padding-left: 20px;
    margin-bottom: 40px;
    background-color: #324A45;
}

#table-div{
    margin-top: 20px;
    margin-bottom: 20px;
}

.btn-default {
    border: 1px solid #324A45;;
    color: #324A45;
    /*background-color: transparent;*/
}

ul.banner-social-buttons {
    margin-top: 0;
}

#numbers{
    margin-bottom: 30px;
    margin-top: 0;
}
img{
    margin: 0 auto;
}

#controls{
    display: flex;
    flex-wrap: no-wrap;
    justify-content: center;
    align-items: center;
    align-content: center;
    height: 100%;
}

#numbers{
    display: flex;
    flex-wrap: no-wrap;
    justify-content: center;
    align-items: flex-end;
    align-content: center;
}

tr:nth-child(3n){
    border-bottom: 4px black solid;
}
td:nth-child(3n){
    border-right: 4px black solid;
}
table { 
    border-collapse: collapse; 
    border: 4px black solid;
}
td{
    padding:0;
}
.change-background{
    background: #C4A58C;
}

.change-background2{
    background: #798D82;
}

.about-p{
    color: black;
}
@media(max-width:1199px) {
    ul.banner-social-buttons {
        margin-top: 15px;
    }
}

@media(max-width:767px) {
    ul.banner-social-buttons li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons li:last-child {
        margin-bottom: 0;
    }
}

footer {
    padding: 30px 0;
}

footer p {
    margin: 0;
    font-size: 18px
}

::-moz-selection {
    text-shadow: none;
    /*background: #fcfcfc;*/
    /*background: rgba(255,255,255,.2);*/
}

::selection {
    text-shadow: none;
    /*background: #fcfcfc;*/
    /*background: rgba(255,255,255,.2);*/
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background: 0 0;
}

body {
    webkit-tap-highlight-color: rgba(255,255,255,.2);
}

.flash {
  -moz-animation: flash 1s ease-out;
  -moz-animation-iteration-count: 1;

  -webkit-animation: flash 1s ease-out;
  -webkit-animation-iteration-count: 1;

  -ms-animation: flash 1s ease-out;
  -ms-animation-iteration-count: 1;
}

@-webkit-keyframes flash {
    0% { background-color: none; }
    50% { background-color: #798D82; }
    100% { background-color: none; }
}

@-moz-keyframes flash {
    0% { background-color: none; }
    50% { background-color: #798D82; }
    100% { background-color: none; }
}

@-ms-keyframes flash {
    0% { background-color: none; }
    50% { background-color: #798D82; }
    100% { background-color: none; }
}

